# sdk-py

./: README.md  pyproject.toml
keyid/: __init__.py  client.py  crypto.py
keyid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
