[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keyid"
version = "0.1.0"
description = "KeyID.ai SDK — agent email infrastructure"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["httpx>=0.25"]
keywords = ["keyid", "agent", "email", "ed25519", "identity"]

[project.urls]
Homepage = "https://keyid.ai"
Repository = "https://github.com/KeyID-AI/KeyID"
